[tool.poetry]
name = "Shuttle-Bus-Reservation-System"
version = "0.1.0"
description = "又一个校车预约系统课设警告"
authors = ["AzideCupric <rukuy@qq.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/UESTC-SE-2023-16/shuttle-bus-reservation"
repository = "https://github.com/UESTC-SE-2023-16/shuttle-bus-reservation"
documentation = "https://github.com/UESTC-SE-2023-16/shuttle-bus-reservation/README.md"
keywords = []
classifiers = []

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.104.1"
pydantic = "^2.5.2"
sqlalchemy = "^2.0.23"

[tool.poetry.group.dev.dependencies]
ruff = "^0.0.275"
isort = "^5.10.1"
black = "^23.1.0"
nonemoji = "^0.1.2"
pre-commit = "^3.1.0"

[tool.black]
line-length = 120
target-version = ["py310", "py311"]
include = '\.pyi?$'
extend-exclude = '''
'''

[tool.isort]
profile = "black"
line_length = 120
preview = true
length_sort = true
skip_gitignore = true
force_sort_within_sections = true
extra_standard_library = ["typing_extensions"]

[tool.ruff]
select = ["E", "W", "F", "UP", "C", "T", "PYI", "PT", "Q"]
ignore = ["C901"]

line-length = 120
target-version = "py310"

[tool.ruff.flake8-pytest-style]
fixture-parentheses = false
mark-parentheses = false

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
